--- a/css/style.css
+++ b/css/style.css
@@ -1,86 +1,24 @@
-@import url(http://fonts.googleapis.com/css?family=Gabriela);
-
-html, body {
-  height: 100%;
-  min-height: 100%;
-}
-
+/* Change font color */
 body {
-  background: url(../images/backgrounds/architecture.jpg) center no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 100%;
+  color: blue;
 }
 
-.wrapper {
-  margin: 0 auto;
-  width: 60%;
-  padding-bottom: 40px;
-}
-
-#content {
-  padding: 20px;
-  background: rgba(255,255,255,.85);
-}
-
-h1, h2 {
-  font-family: 'Gabriela', serif;
-  color: #fff;
-}
-
+/* Change font size */
 h1 {
-  font-size: 3.5em;
-  margin-bottom: 0;
+  font-size: 2em;
 }
 
-h2 {
-  font-size: 1.5em;
-  margin-top: .5em;
-}
-
-h3 {
-  font-family: 'Gabriela', serif;
-  font-size: 1.5em;
-  margin-top: .5em;
-}
-
-img {
-  max-width: 100%;
-  width: 100%;
-  height: auto;
-}
-
+/* Change font family */
 p {
-  font-size: 1em;
+  font-family: Arial, sans-serif;
 }
 
-a {
-  color: black;
-  text-decoration: none;
+/* Change background color */
+body {
+  background-color: lightgray;
 }
 
-a:hover {
-  text-decoration: underline;
-}
-
-@media only screen and (max-width: 1042px) {
-  .wrapper {
-    width: 80%;
-  }
-}
-
-@media only screen and (max-width: 784px) {
-  body {
-    font-size: 120%;
-  }
-  h1 {
-    font-size: 2.5em;
-  }
-  h2 {
-    font-size: 1em;
-  }
-  .wrapper {
-    width: 95%;
-  }
+/* Create a background gradient */
+body {
+  background: linear-gradient(to right, red, yellow);
 }
